[gd_scene load_steps=4 format=2]

[ext_resource path="res://misc/line-text-64.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/Arcade/Scripts/Parts/Settings-Temp-Menu_Camp.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Menu_Campaign_Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 40.0
margin_top = 270.0
margin_right = 1890.0
margin_bottom = 1045.0
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0
editor_only = false

[node name="ReferenceRect_Stock" type="ReferenceRect" parent="."]
visible = false
margin_left = 50.0
margin_top = 320.0
margin_right = 280.0
margin_bottom = 390.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="ReferenceRect_Score" type="ReferenceRect" parent="."]
visible = false
margin_left = 340.0
margin_top = 320.0
margin_right = 570.0
margin_bottom = 390.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="ReferenceRect_Time" type="ReferenceRect" parent="."]
visible = false
margin_left = 640.0
margin_top = 320.0
margin_right = 870.0
margin_bottom = 390.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 320.0
margin_right = 749.0
margin_bottom = 675.0
rect_pivot_offset = Vector2( 1960, -90 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1782.0
margin_bottom = 67.0

[node name="Label_01" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 261.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )
text = "Easy   "

[node name="Label_02" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 265.0
margin_right = 594.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Medium   "

[node name="Label_03" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 598.0
margin_right = 1782.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Hard                            "

[node name="Label_01" type="Label" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 1782.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 1782.0
margin_bottom = 209.0

[node name="Label_Stock2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 201.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Stock:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 205.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 40.0
text = "             "

[node name="Label_Stock3" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 261.0
margin_right = 299.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 303.0
margin_top = 26.0
margin_right = 355.0
margin_bottom = 40.0
text = "             "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 359.0
margin_right = 1782.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource( 1 )
min_value = 1.0
max_value = 99.0
value = 5.0
rounded = true

[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_HSlider_Stock_value_changed"]
